--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,26 @@
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# don't rename windows automatically
+set-option -g allow-rename off
+
+# '"'
 # vi is good
 setw -g mode-keys vi
 
 # mouse behavior
-setw -g mouse on
+set -g mouse on
+set -g status-style 'bg=#333333 fg=#5eacd3'
 
 # use vim-like keys for splits and windows
 bind-key h select-pane -L
